Additions to the installation and google analytics

--- a/craigCode.css
+++ b/craigCode.css
@@ -60,7 +60,7 @@
     margin: 10px;
 }
 
-.craig-code .navigation .pages .menuGroup
+.craig-code .navigation .pages .menu-group
 {
     display: none;
 }
