--- a/craigCode.css
+++ b/craigCode.css
@@ -171,7 +171,12 @@
 {
     display: none;
 
-    margin: 10px;
+    margin: 30px;
+}
+
+.craig-code .content .page p
+{
+    font-size: 18pt;
 }
 
 .craig-code .content .page .center
